music: spacing fix for artist names with jp charss

--- a/.config/eww/css/_colorscheme.scss
+++ b/.config/eww/css/_colorscheme.scss
@@ -1,13 +1,11 @@
-//Auto generated color theme for image at: https://i.ytimg.com/vi/v3JExHpJ09s/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAsQ6siv_HQMVyJmfFx_WoSo-ZHkA
-@function bluetint($color, $percentage) { @return mix(#CDDFED, $color, $percentage); }
-@function blueshade($color, $percentage) { @return mix(#152E50, $color, $percentage); }
-$colorbg: #240440;
-$colortext: #ecdfed;
-$color0: #AC16C7;
-$color1: #B117DF;
-$color2: #8701E7;
-$color3: #C53CC3;
-$color4: #D526D7;
-$color5: #D5A2DA;
-$color6: #ecdfed;
-$color7: #C53CC3;
+//Auto generated color theme for image at: https://i.ytimg.com/vi/0CuTOGKMWW0/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBkQ9ETNGNv538s2qddDWjrEvW4-A
+$colorbg: #09040A;
+$colortext: #1AEDAB;
+$color0: #11988A;
+$color1: #04B190;
+$color2: #05CB99;
+$color3: #1AEDAB;
+$color4: #5FD0AC;
+$color5: #9FD2BF;
+$color6: #e1ede5;
+$color7: #1AEDAB;
