--- a/.config/eww/css/_music.scss
+++ b/.config/eww/css/_music.scss
@@ -59,7 +59,8 @@
   color: $colortext;
   font-family: 'Torus', 'Material Symbols Rounded';
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  min-height: 25px;
 }
 
 .music-button label {
